--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,8 +53,9 @@ permissions:
   contents: read
   
 env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  EMAIL: ${{ secrets.EMAIL }}
 
 jobs:
   terraform:
