--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,47 +1,3 @@
-# This workflow installs the latest version of Terraform CLI and configures the Terraform CLI configuration file
-# with an API token for Terraform Cloud (app.terraform.io). On pull request events, this workflow will run
-# `terraform init`, `terraform fmt`, and `terraform plan` (speculative plan via Terraform Cloud). On push events
-# to the "main" branch, `terraform apply` will be executed.
-#
-# Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
-#
-# To use this workflow, you will need to complete the following setup steps.
-#
-# 1. Create a `main.tf` file in the root of this repository with the `remote` backend and one or more resources defined.
-#   Example `main.tf`:
-#     # The configuration for the `remote` backend.
-#     terraform {
-#       backend "remote" {
-#         # The name of your Terraform Cloud organization.
-#         organization = "example-organization"
-#
-#         # The name of the Terraform Cloud workspace to store Terraform state files in.
-#         workspaces {
-#           name = "example-workspace"
-#         }
-#       }
-#     }
-#
-#     # An example resource that does nothing.
-#     resource "null_resource" "example" {
-#       triggers = {
-#         value = "A example resource that does nothing!"
-#       }
-#     }
-#
-#
-# 2. Generate a Terraform Cloud user API token and store it as a GitHub secret (e.g. TF_API_TOKEN) on this repository.
-#   Documentation:
-#     - https://www.terraform.io/docs/cloud/users-teams-organizations/api-tokens.html
-#     - https://help.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
-#
-# 3. Reference the GitHub secret in step using the `hashicorp/setup-terraform` GitHub Action.
-#   Example:
-#     - name: Setup Terraform
-#       uses: hashicorp/setup-terraform@v1
-#       with:
-#         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
 name: 'Terraform'
 
 on:
@@ -79,6 +35,9 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+    - name: Install sendmail
+      run: sudo apt-get install -y sendmail
+
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
@@ -100,14 +59,14 @@ jobs:
     - name: Check for errors in Plan
       if: failure()
       run: |
-        echo "Terraform Plan failed" | mail -s "Terraform Plan Failed" ${{ secrets.EMAIL }}
+        echo "Terraform Plan failed" | mail -s "Terraform Plan Failed" sendmail ${{ secrets.EMAIL }}
 
     - name: Check for errors in Apply
       if: failure()
       run: |
-        echo "Terraform Apply failed" | mail -s "Terraform Apply Failed" ${{ secrets.EMAIL }}
+        echo "Terraform Apply failed" | mail -s "Terraform Apply Failed" sendmail ${{ secrets.EMAIL }}
 
     - name: Notify success
       if: success()
       run: |
-        echo "Terraform Apply succeeded" | mail -s "Terraform Apply Succeeded" ${{ secrets.EMAIL }}
+        echo "Terraform Apply succeeded" | mail -s "Terraform Apply Succeeded" sendmail ${{ secrets.EMAIL }}
