--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-
+  
 env:
   TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
   TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -34,17 +34,14 @@ jobs:
       run: terraform init
 
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform fmt 
 
     - name: Terraform Plan
-      run: terraform plan -input=false -out=tfplan
-
-    - name: Show Plan Output
-      run: terraform show -json tfplan | jq '.'
+      run: terraform plan 
 
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false tfplan
+      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+      run: terraform apply --auto-approve 
 
     - name: Notify Plan Failure
       if: failure()
