--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply --auto-approve plan.tfplan 
+      run: terraform apply "plan.tfplan" 
 
     - name: Notify Plan Failure
       if: failure()
