--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
 
-    - name: Install sendmail
-      run: sudo apt-get install -y sendmail
+    - name: Install mailx
+      run: sudo apt-get install -y mailutils
 
     - name: Terraform Init
       run: terraform init
@@ -40,20 +40,20 @@ jobs:
       run: terraform plan -out=plan.tfplan
 
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply "plan.tfplan" 
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve "plan.tfplan"  
 
     - name: Notify Plan Failure
       if: failure()
       run: |
-        echo -e "Subject: Terraform Plan Failed\n\nTerraform Plan failed" | sendmail ${{ secrets.EMAIL }}
+        echo "Terraform Plan failed" | mail -s "Terraform Plan Failed" ${{ secrets.EMAIL }}
 
     - name: Notify Apply Failure
       if: failure()
       run: |
-        echo -e "Subject: Terraform Apply Failed\n\nTerraform Apply failed" | sendmail ${{ secrets.EMAIL }}
+        echo "Terraform Apply failed" | mail -s "Terraform Apply Failed" ${{ secrets.EMAIL }}
 
     - name: Notify Success
       if: success()
       run: |
-        echo -e "Subject: Terraform Apply Succeeded\n\nTerraform Apply succeeded" | sendmail ${{ secrets.EMAIL }}
+        echo "Terraform Apply succeeded" | mail -s "Terraform Apply Succeeded" ${{ secrets.EMAIL }}
