--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,21 +4,21 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-  
+
 env:
   TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
   TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   EMAIL: ${{ secrets.EMAIL }}
+  SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
+  SMTP_PORT: ${{ secrets.SMTP_PORT }}
+  SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+  SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
 
 jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
     environment: production
-
-    defaults:
-      run:
-        shell: bash
 
     steps:
     - name: Checkout
@@ -27,8 +27,8 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
 
-    - name: Install mailx
-      run: sudo apt-get install -y mailutils
+    - name: Install swaks
+      run: sudo apt-get install -y swaks
 
     - name: Terraform Init
       run: terraform init
@@ -41,19 +41,46 @@ jobs:
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve "plan.tfplan"  
+      run: terraform apply -auto-approve "plan.tfplan"
+
+    - name: Terraform Destroy
+      run: terraform destroy -auto-approve
 
     - name: Notify Plan Failure
       if: failure()
       run: |
-        echo "Terraform Plan failed" | mail -s "Terraform Plan Failed" ${{ secrets.EMAIL }}
+        swaks --to ${{ secrets.EMAIL }} \
+              --from ${{ secrets.SMTP_USERNAME }} \
+              --server ${{ secrets.SMTP_SERVER }} \
+              --port ${{ secrets.SMTP_PORT }} \
+              --auth LOGIN \
+              --auth-user ${{ secrets.SMTP_USERNAME }} \
+              --auth-password ${{ secrets.SMTP_PASSWORD }} \
+              --header "Subject: Terraform Plan Failed" \
+              --body "Terraform Plan failed. Check the logs for details."
 
     - name: Notify Apply Failure
       if: failure()
       run: |
-        echo "Terraform Apply failed" | mail -s "Terraform Apply Failed" ${{ secrets.EMAIL }}
+        swaks --to ${{ secrets.EMAIL }} \
+              --from ${{ secrets.SMTP_USERNAME }} \
+              --server ${{ secrets.SMTP_SERVER }} \
+              --port ${{ secrets.SMTP_PORT }} \
+              --auth LOGIN \
+              --auth-user ${{ secrets.SMTP_USERNAME }} \
+              --auth-password ${{ secrets.SMTP_PASSWORD }} \
+              --header "Subject: Terraform Apply Failed" \
+              --body "Terraform Apply failed. Check the logs for details."
 
     - name: Notify Success
       if: success()
       run: |
-        echo "Terraform Apply succeeded" | mail -s "Terraform Apply Succeeded" ${{ secrets.EMAIL }}
+        swaks --to ${{ secrets.EMAIL }} \
+              --from ${{ secrets.SMTP_USERNAME }} \
+              --server ${{ secrets.SMTP_SERVER }} \
+              --port ${{ secrets.SMTP_PORT }} \
+              --auth LOGIN \
+              --auth-user ${{ secrets.SMTP_USERNAME }} \
+              --auth-password ${{ secrets.SMTP_PASSWORD }} \
+              --header "Subject: Terraform Apply Succeeded" \
+              --body "Terraform Apply succeeded. Check the logs for details."
