--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,6 @@ on:
 env:
   TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
   TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  EMAIL: ${{ secrets.EMAIL }}
 
 jobs:
   terraform:
@@ -36,24 +35,18 @@ jobs:
     - name: Terraform Plan
       run: terraform plan -out=plan.tfplan
 
-    # - name: Terraform Apply
-    #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    #   run: terraform apply -auto-approve "plan.tfplan"  
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve "plan.tfplan"  
 
-    - name: Terraform Destroy
-      run: terraform destroy
+    - name: Notify Plan Failure
+      if: failure()
+      run: echo -e "Terraform Plan Failed" 
 
-    # - name: Notify Plan Failure
-    #   if: failure()
-    #   run: |
-    #     echo -e "Terraform Plan Failed\n\nTerraform Plan failed" 
-
-    # - name: Notify Apply Failure
-    #   if: failure()
-    #   run: |
-    #     echo -e "Terraform Apply Failed\n\nTerraform Apply failed"
+    - name: Notify Apply Failure
+      if: failure()
+      run: echo -e "Terraform Apply Failed"
 
     - name: Notify Success
       if: success()
-      run: |
-        echo -e "Terraform Apply Succeeded\n\nTerraform Apply succeeded"
+      run: echo -e "Terraform Apply Succeeded"
